--- a/_config.yml
+++ b/_config.yml
@@ -23,10 +23,10 @@ description: >- # used by seo meta and the atom feed
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
-url: "https://Aventis-Tech.github.io"
+url: "https://aefg13507.github.io"
 
 github:
-  username: anmmashud # change to your GitHub username
+  username: aefg13507 # change to your GitHub username
 
 # twitter:
 #   username: twitter_username # change to your Twitter username
@@ -34,12 +34,11 @@ github:
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: Aventis Tech
+  name: Mira
   email: aventistechofficial@gmail.com # change to your email address
   links:
-    # The first element serves as the copyright owner's link
-    - https://twitter.com/anm_mashud # change to your Twitter homepage
-    - https://github.com/anmmashud # change to your GitHub homepage
+    # Thenge to your Twitter homepage
+    - https://github.com/aefg13507 # change to your GitHub homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
